# alerta

./: .alerta.conf  .dockerignore  .env  .env.development  .flake8  .flaskenv  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.txt  MANIFEST.in  Makefile  NOTICE  Procfile  README-wip.md  README.md  README.rst  RUDDER_ENRICH_PLUGIN_BRANCH_NAME  TODO  TODO.txt  VERSION  alerta-server.spec  alerta.spec  alertad-example.conf  alertad.conf  app.json  build.py  build.sh  config.json  custom-settings.py  custom-test.py  dev-start.sh  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  (+23 more)
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: analysis.yml  deploy.yml  docker.yml  github-ci.yml  lint.yml  performance.yml  pr-onto-dev.yaml  pr-onto-master.yaml  push-onto-master.yaml  release.yml  tests.yml
alerta/: .gitignore  __about__.py  __init__.py  alert-checker.py  alert-sender.py  api.py  app.py  app.wsgi  build.py  commands.py  default_settings.py  dev.py  exceptions.py  modsyslog.py  mymodule.py  send.py  settings.py  tasks.py  utils.py  version.py
alerta.rules.d/: rule.json
alerta/actions/: __init__.py  default.py  gitlab.py
alerta/alert/: __init__.py  dedup.py  severity.py  severity_code.py  status.py  status_code.py  syslog.py  transform.py
alerta/app/: __init__.py  alert.py  app.wsgi  auth.py  commands.py  config.py  database.py  es_backend.py  (+10 more)
conf/: alert-aws.yaml  alert-dynect.yaml  alert-ganglia.yaml  alert-notify.yaml  alert-receiver.yaml  alert-snmptrap.yaml  alerta.yaml
contrib/: alerta-template.json  irssi.config  watchdog.py
dashboard/: release.php
doc/: RELEASE-NOTES.txt  banner.txt
docker/: Dockerfile  docker-compose.yml
docs/: HOWTO.md  README.md  RELEASE-NOTES.txt  banner.txt
etc/: 05-alerter.conf  activemq-alerta.xml  activemq-alerter.xml  alerta.logrotate  httpd-alerta-dashboard.conf  httpd-alerta.conf  rsyslog.conf  snmptrapd.conf
examples/: alert-curl.sh  create-new-alert.sh  curl.sh  delete-ack-alerts.sh  oembed-for-grafana.html  oembed.html  snmptrap.sh
experimental/: alert-analyser.py  alert-aws.py  alert-console.py  alert-dynect.py  alert-pager.py  treemap.html
htdocs/: about.html  about.php  code.html  code.php  details.php  dev.html  dev.php  index.html  index.php  infra.html  infra.html.BAK  infra.php  lwp.html  lwp.php  qa.html  qa.php  release.html  release.php  site.html  site.php  stage.html  stage.php  test.html  test.php  treemap.html  widget.php
sbin/: alert-acker.sh  alert-analyze.py  alert-checker.py  alert-console.py  alert-query.py  alert-sender.py  countTags.js  removeExpiredAlerts.js
scripts/: cloudwatch_alarm.sh  countTags.js  generate_alerts.py  mk_demo_key.py  pingdom.sh  test_all.sh  watchdog.py
sql/: V1_0__Baseline.sql  alerts.sql  baseline.sql  blackouts.sql  customers.sql  heartbeats.sql  keys.sql  metrics.sql  perms.sql  users.sql
tests/: context.py  example.conf  test.py  test_actions.py  test_aggregations.py  test_alert.py  test_alertdoc.py  test_alerts.py  test_app.py  test_attributes.py  test_auth.py  test_auth_ldap.py  test_authproxy.py  test_base.py  test_blackouts.py  test_builtins.py  test_bunch.py  test_cas.py  test_commands.py  test_config.py  test_cors.py  test_customers.py  test_daemon.py  test_dedup.py  test_filters.py  test_forwarder.py  test_ganglia.py  test_groups.py  test_heartbeat.py  test_heartbeats.py  test_hooks.py  test_isa_18_2.py  test_kombu.py  test_ldap.py  test_leaky.py  test_log.py  test_logging.py  test_management.py  test_mcp.py  test_metrics.py  (+25 more)
tools/: alertctl  convertV1toV2.js  housekeepingAlerts.js  removeExpiredAlerts.js
(+646 files in other folders)
